--- a/_modules/octodns/idna.html
+++ b/_modules/octodns/idna.html
@@ -430,8 +430,11 @@
             <span class="k">yield</span> <span class="p">(</span><span class="n">idna_decode</span><span class="p">(</span><span class="n">key</span><span class="p">),</span> <span class="n">value</span><span class="p">)</span></div>
 
 
+<div class="viewcode-block" id="IdnaDict.__repr__">
+<a class="viewcode-back" href="../../modules/octodns.idna.html#octodns.idna.IdnaDict.__repr__">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="fm">__repr__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_data</span><span class="o">.</span><span class="fm">__repr__</span><span class="p">()</span></div>
+</div>
 
 </pre></div>
         </article>
