--- a/_modules/octodns/record/geo.html
+++ b/_modules/octodns/record/geo.html
@@ -430,13 +430,16 @@
         <span class="sa">r</span><span class="s1">&#39;(-(?P&lt;subdivision_code&gt;\w\w))?)?$&#39;</span>
     <span class="p">)</span>
 
+<div class="viewcode-block" id="GeoValue._validate_geo">
+<a class="viewcode-back" href="../../../modules/record/octodns.record.geo.html#octodns.record.geo.GeoValue._validate_geo">[docs]</a>
     <span class="nd">@classmethod</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">_validate_geo</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">code</span><span class="p">):</span>
         <span class="n">reasons</span> <span class="o">=</span> <span class="p">[]</span>
         <span class="n">match</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">geo_re</span><span class="o">.</span><span class="n">match</span><span class="p">(</span><span class="n">code</span><span class="p">)</span>
         <span class="k">if</span> <span class="ow">not</span> <span class="n">match</span><span class="p">:</span>
             <span class="n">reasons</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="sa">f</span><span class="s1">&#39;invalid geo &quot;</span><span class="si">{</span><span class="n">code</span><span class="si">}</span><span class="s1">&quot;&#39;</span><span class="p">)</span>
-        <span class="k">return</span> <span class="n">reasons</span>
+        <span class="k">return</span> <span class="n">reasons</span></div>
+
 
 <div class="viewcode-block" id="GeoValue.__init__">
 <a class="viewcode-back" href="../../../modules/record/octodns.record.geo.html#octodns.record.geo.GeoValue.__init__">[docs]</a>
@@ -456,22 +459,30 @@
             <span class="k">yield</span> <span class="s1">&#39;-&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">bits</span><span class="p">)</span>
             <span class="n">bits</span><span class="o">.</span><span class="n">pop</span><span class="p">()</span>
 
+<div class="viewcode-block" id="GeoValue._equality_tuple">
+<a class="viewcode-back" href="../../../modules/record/octodns.record.geo.html#octodns.record.geo.GeoValue._equality_tuple">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">_equality_tuple</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="p">(</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">continent_code</span><span class="p">,</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">country_code</span><span class="p">,</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">subdivision_code</span><span class="p">,</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">values</span><span class="p">,</span>
-        <span class="p">)</span>
+        <span class="p">)</span></div>
 
+
+<div class="viewcode-block" id="GeoValue.__repr__">
+<a class="viewcode-back" href="../../../modules/record/octodns.record.geo.html#octodns.record.geo.GeoValue.__repr__">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="fm">__repr__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="p">(</span>
             <span class="sa">f</span><span class="s2">&quot;&#39;Geo </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">continent_code</span><span class="si">}</span><span class="s2"> </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">country_code</span><span class="si">}</span><span class="s2"> &quot;</span>
             <span class="s2">&quot;</span><span class="si">{self.subdivision_code}</span><span class="s2"> </span><span class="si">{self.values}</span><span class="s2">&#39;&quot;</span>
         <span class="p">)</span></div>
+</div>
 
 
 
+<div class="viewcode-block" id="_GeoMixin">
+<a class="viewcode-back" href="../../../modules/record/octodns.record.geo.html#octodns.record.geo._GeoMixin">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">_GeoMixin</span><span class="p">(</span><span class="n">ValuesMixin</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&#39;&#39;&#39;</span>
 <span class="sd">    Adds GeoDNS support to a record.</span>
@@ -479,6 +490,8 @@
 <span class="sd">    Must be included before `Record`.</span>
 <span class="sd">    &#39;&#39;&#39;</span>
 
+<div class="viewcode-block" id="_GeoMixin.validate">
+<a class="viewcode-back" href="../../../modules/record/octodns.record.geo.html#octodns.record.geo._GeoMixin.validate">[docs]</a>
     <span class="nd">@classmethod</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">validate</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">name</span><span class="p">,</span> <span class="n">fqdn</span><span class="p">,</span> <span class="n">data</span><span class="p">):</span>
         <span class="n">reasons</span> <span class="o">=</span> <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="n">validate</span><span class="p">(</span><span class="n">name</span><span class="p">,</span> <span class="n">fqdn</span><span class="p">,</span> <span class="n">data</span><span class="p">)</span>
@@ -493,8 +506,11 @@
                 <span class="n">reasons</span><span class="o">.</span><span class="n">extend</span><span class="p">(</span><span class="bp">cls</span><span class="o">.</span><span class="n">_value_type</span><span class="o">.</span><span class="n">validate</span><span class="p">(</span><span class="n">values</span><span class="p">,</span> <span class="bp">cls</span><span class="o">.</span><span class="n">_type</span><span class="p">))</span>
         <span class="k">except</span> <span class="ne">KeyError</span><span class="p">:</span>
             <span class="k">pass</span>
-        <span class="k">return</span> <span class="n">reasons</span>
+        <span class="k">return</span> <span class="n">reasons</span></div>
 
+
+<div class="viewcode-block" id="_GeoMixin.__init__">
+<a class="viewcode-back" href="../../../modules/record/octodns.record.geo.html#octodns.record.geo._GeoMixin.__init__">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">zone</span><span class="p">,</span> <span class="n">name</span><span class="p">,</span> <span class="n">data</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">zone</span><span class="p">,</span> <span class="n">name</span><span class="p">,</span> <span class="n">data</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
         <span class="k">try</span><span class="p">:</span>
@@ -502,8 +518,11 @@
         <span class="k">except</span> <span class="ne">KeyError</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">geo</span> <span class="o">=</span> <span class="p">{}</span>
         <span class="k">for</span> <span class="n">code</span><span class="p">,</span> <span class="n">values</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">geo</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">geo</span><span class="p">[</span><span class="n">code</span><span class="p">]</span> <span class="o">=</span> <span class="n">GeoValue</span><span class="p">(</span><span class="n">code</span><span class="p">,</span> <span class="n">values</span><span class="p">)</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">geo</span><span class="p">[</span><span class="n">code</span><span class="p">]</span> <span class="o">=</span> <span class="n">GeoValue</span><span class="p">(</span><span class="n">code</span><span class="p">,</span> <span class="n">values</span><span class="p">)</span></div>
 
+
+<div class="viewcode-block" id="_GeoMixin._data">
+<a class="viewcode-back" href="../../../modules/record/octodns.record.geo.html#octodns.record.geo._GeoMixin._data">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">_data</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="n">ret</span> <span class="o">=</span> <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="n">_data</span><span class="p">()</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">geo</span><span class="p">:</span>
@@ -511,14 +530,20 @@
             <span class="k">for</span> <span class="n">code</span><span class="p">,</span> <span class="n">value</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">geo</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
                 <span class="n">geo</span><span class="p">[</span><span class="n">code</span><span class="p">]</span> <span class="o">=</span> <span class="n">value</span><span class="o">.</span><span class="n">values</span>
             <span class="n">ret</span><span class="p">[</span><span class="s1">&#39;geo&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">geo</span>
-        <span class="k">return</span> <span class="n">ret</span>
+        <span class="k">return</span> <span class="n">ret</span></div>
 
+
+<div class="viewcode-block" id="_GeoMixin.changes">
+<a class="viewcode-back" href="../../../modules/record/octodns.record.geo.html#octodns.record.geo._GeoMixin.changes">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">changes</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">other</span><span class="p">,</span> <span class="n">target</span><span class="p">):</span>
         <span class="k">if</span> <span class="n">target</span><span class="o">.</span><span class="n">SUPPORTS_GEO</span><span class="p">:</span>
             <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">geo</span> <span class="o">!=</span> <span class="n">other</span><span class="o">.</span><span class="n">geo</span><span class="p">:</span>
                 <span class="k">return</span> <span class="n">Update</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">other</span><span class="p">)</span>
-        <span class="k">return</span> <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="n">changes</span><span class="p">(</span><span class="n">other</span><span class="p">,</span> <span class="n">target</span><span class="p">)</span>
+        <span class="k">return</span> <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="n">changes</span><span class="p">(</span><span class="n">other</span><span class="p">,</span> <span class="n">target</span><span class="p">)</span></div>
 
+
+<div class="viewcode-block" id="_GeoMixin.__repr__">
+<a class="viewcode-back" href="../../../modules/record/octodns.record.geo.html#octodns.record.geo._GeoMixin.__repr__">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="fm">__repr__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">geo</span><span class="p">:</span>
             <span class="n">klass</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="vm">__class__</span><span class="o">.</span><span class="vm">__name__</span>
@@ -526,7 +551,9 @@
                 <span class="sa">f</span><span class="s1">&#39;&lt;</span><span class="si">{</span><span class="n">klass</span><span class="si">}</span><span class="s1"> </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">_type</span><span class="si">}</span><span class="s1"> </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">ttl</span><span class="si">}</span><span class="s1">, </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">decoded_fqdn</span><span class="si">}</span><span class="s1">, &#39;</span>
                 <span class="sa">f</span><span class="s1">&#39;</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">values</span><span class="si">}</span><span class="s1">, </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">geo</span><span class="si">}</span><span class="s1">&gt;&#39;</span>
             <span class="p">)</span>
-        <span class="k">return</span> <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__repr__</span><span class="p">()</span>
+        <span class="k">return</span> <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__repr__</span><span class="p">()</span></div>
+</div>
+
 </pre></div>
         </article>
       </div>
