--- a/_modules/octodns/source/base.html
+++ b/_modules/octodns/source/base.html
@@ -382,8 +382,11 @@
         <span class="k">return</span> <span class="n">record</span><span class="o">.</span><span class="n">_type</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">SUPPORTS</span></div>
 
 
+<div class="viewcode-block" id="BaseSource.__repr__">
+<a class="viewcode-back" href="../../../modules/source/octodns.source.base.html#octodns.source.base.BaseSource.__repr__">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="fm">__repr__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="vm">__class__</span><span class="o">.</span><span class="vm">__name__</span></div>
+</div>
 
 </pre></div>
         </article>
