--- a/_modules/index.html
+++ b/_modules/index.html
@@ -319,7 +319,8 @@
         </div>
         <article role="main" id="furo-main-content">
           <h1>All modules for which code is available</h1>
-<ul><li><a href="octodns/cmds/args.html">octodns.cmds.args</a></li>
+<ul><li><a href="_abc.html">_abc</a></li>
+<li><a href="octodns/cmds/args.html">octodns.cmds.args</a></li>
 <li><a href="octodns/cmds/compare.html">octodns.cmds.compare</a></li>
 <li><a href="octodns/cmds/dump.html">octodns.cmds.dump</a></li>
 <li><a href="octodns/cmds/report.html">octodns.cmds.report</a></li>
@@ -349,12 +350,15 @@
 <li><a href="octodns/record/base.html">octodns.record.base</a></li>
 <li><a href="octodns/record/caa.html">octodns.record.caa</a></li>
 <li><a href="octodns/record/change.html">octodns.record.change</a></li>
+<li><a href="octodns/record/chunked.html">octodns.record.chunked</a></li>
 <li><a href="octodns/record/cname.html">octodns.record.cname</a></li>
 <li><a href="octodns/record/dname.html">octodns.record.dname</a></li>
 <li><a href="octodns/record/ds.html">octodns.record.ds</a></li>
+<li><a href="octodns/record/dynamic.html">octodns.record.dynamic</a></li>
 <li><a href="octodns/record/exception.html">octodns.record.exception</a></li>
 <li><a href="octodns/record/geo.html">octodns.record.geo</a></li>
 <li><a href="octodns/record/https.html">octodns.record.https</a></li>
+<li><a href="octodns/record/ip.html">octodns.record.ip</a></li>
 <li><a href="octodns/record/loc.html">octodns.record.loc</a></li>
 <li><a href="octodns/record/mx.html">octodns.record.mx</a></li>
 <li><a href="octodns/record/naptr.html">octodns.record.naptr</a></li>
@@ -366,6 +370,7 @@
 <li><a href="octodns/record/sshfp.html">octodns.record.sshfp</a></li>
 <li><a href="octodns/record/subnet.html">octodns.record.subnet</a></li>
 <li><a href="octodns/record/svcb.html">octodns.record.svcb</a></li>
+<li><a href="octodns/record/target.html">octodns.record.target</a></li>
 <li><a href="octodns/record/tlsa.html">octodns.record.tlsa</a></li>
 <li><a href="octodns/record/txt.html">octodns.record.txt</a></li>
 <li><a href="octodns/record/urlfwd.html">octodns.record.urlfwd</a></li>
