--- a/_modules/octodns/cmds/args.html
+++ b/_modules/octodns/cmds/args.html
@@ -393,6 +393,8 @@
         <span class="k">return</span> <span class="n">args</span></div>
 
 
+<div class="viewcode-block" id="ArgumentParser._setup_logging">
+<a class="viewcode-back" href="../../../modules/cmds/octodns.cmds.args.html#octodns.cmds.args.ArgumentParser._setup_logging">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">_setup_logging</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">args</span><span class="p">,</span> <span class="n">default_log_level</span><span class="p">):</span>
         <span class="k">if</span> <span class="n">args</span><span class="o">.</span><span class="n">logging_config</span><span class="p">:</span>
             <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">args</span><span class="o">.</span><span class="n">logging_config</span><span class="p">)</span> <span class="k">as</span> <span class="n">fh</span><span class="p">:</span>
@@ -429,6 +431,7 @@
             <span class="c1"># we still want plans to come out during quite so set the plan</span>
             <span class="c1"># logger output to info in case the PlanLogger is being used</span>
             <span class="n">getLogger</span><span class="p">(</span><span class="s1">&#39;Plan&#39;</span><span class="p">)</span><span class="o">.</span><span class="n">setLevel</span><span class="p">(</span><span class="n">INFO</span><span class="p">)</span></div>
+</div>
 
 </pre></div>
         </article>
