--- a/_modules/octodns/processor/ownership.html
+++ b/_modules/octodns/processor/ownership.html
@@ -370,12 +370,15 @@
         <span class="k">return</span> <span class="n">desired</span></div>
 
 
+<div class="viewcode-block" id="OwnershipProcessor._is_ownership">
+<a class="viewcode-back" href="../../../modules/processor/octodns.processor.ownership.html#octodns.processor.ownership.OwnershipProcessor._is_ownership">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">_is_ownership</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">record</span><span class="p">):</span>
         <span class="k">return</span> <span class="p">(</span>
             <span class="n">record</span><span class="o">.</span><span class="n">_type</span> <span class="o">==</span> <span class="s1">&#39;TXT&#39;</span>
             <span class="ow">and</span> <span class="n">record</span><span class="o">.</span><span class="n">name</span><span class="o">.</span><span class="n">startswith</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">txt_name</span><span class="p">)</span>
             <span class="ow">and</span> <span class="n">record</span><span class="o">.</span><span class="n">values</span> <span class="o">==</span> <span class="bp">self</span><span class="o">.</span><span class="n">_txt_values</span>
-        <span class="p">)</span>
+        <span class="p">)</span></div>
+
 
 <div class="viewcode-block" id="OwnershipProcessor.process_plan">
 <a class="viewcode-back" href="../../../modules/processor/octodns.processor.ownership.html#octodns.processor.ownership.OwnershipProcessor.process_plan">[docs]</a>
