--- a/_modules/octodns/record/loc.html
+++ b/_modules/octodns/record/loc.html
@@ -658,6 +658,8 @@
             <span class="p">)</span>
         <span class="p">)</span>
 
+<div class="viewcode-block" id="LocValue._equality_tuple">
+<a class="viewcode-back" href="../../../modules/record/octodns.record.loc.html#octodns.record.loc.LocValue._equality_tuple">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">_equality_tuple</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="p">(</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">lat_degrees</span><span class="p">,</span>
@@ -672,8 +674,11 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">size</span><span class="p">,</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">precision_horz</span><span class="p">,</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">precision_vert</span><span class="p">,</span>
-        <span class="p">)</span>
+        <span class="p">)</span></div>
 
+
+<div class="viewcode-block" id="LocValue.__repr__">
+<a class="viewcode-back" href="../../../modules/record/octodns.record.loc.html#octodns.record.loc.LocValue.__repr__">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="fm">__repr__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="p">(</span>
             <span class="sa">f</span><span class="s2">&quot;&#39;</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">lat_degrees</span><span class="si">}</span><span class="s2"> </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">lat_minutes</span><span class="si">}</span><span class="s2"> &quot;</span>
@@ -683,6 +688,7 @@
             <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">altitude</span><span class="si">:</span><span class="s2">.2f</span><span class="si">}</span><span class="s2">m </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">size</span><span class="si">:</span><span class="s2">.2f</span><span class="si">}</span><span class="s2">m &quot;</span>
             <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">precision_horz</span><span class="si">:</span><span class="s2">.2f</span><span class="si">}</span><span class="s2">m </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">precision_vert</span><span class="si">:</span><span class="s2">.2f</span><span class="si">}</span><span class="s2">m&#39;&quot;</span>
         <span class="p">)</span></div>
+</div>
 
 
 
