--- a/_modules/octodns/record/rr.html
+++ b/_modules/octodns/record/rr.html
@@ -355,8 +355,11 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">rdata</span> <span class="o">=</span> <span class="n">rdata</span></div>
 
 
+<div class="viewcode-block" id="Rr.__repr__">
+<a class="viewcode-back" href="../../../modules/record/octodns.record.rr.html#octodns.record.rr.Rr.__repr__">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="fm">__repr__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="sa">f</span><span class="s1">&#39;Rr&lt;</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">name</span><span class="si">}</span><span class="s1">, </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">_type</span><span class="si">}</span><span class="s1">, </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">ttl</span><span class="si">}</span><span class="s1">, </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">rdata</span><span class="si">}</span><span class="s1">&#39;</span></div>
+</div>
 
 </pre></div>
         </article>
