--- a/_modules/octodns/record/tlsa.html
+++ b/_modules/octodns/record/tlsa.html
@@ -471,19 +471,25 @@
     <span class="k">def</span><span class="w"> </span><span class="nf">rdata_text</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="sa">f</span><span class="s1">&#39;</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">certificate_usage</span><span class="si">}</span><span class="s1"> </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">selector</span><span class="si">}</span><span class="s1"> </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">matching_type</span><span class="si">}</span><span class="s1"> </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">certificate_association_data</span><span class="si">}</span><span class="s1">&#39;</span>
 
+<div class="viewcode-block" id="TlsaValue._equality_tuple">
+<a class="viewcode-back" href="../../../modules/record/octodns.record.tlsa.html#octodns.record.tlsa.TlsaValue._equality_tuple">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">_equality_tuple</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="p">(</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">certificate_usage</span><span class="p">,</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">selector</span><span class="p">,</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">matching_type</span><span class="p">,</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">certificate_association_data</span><span class="p">,</span>
-        <span class="p">)</span>
+        <span class="p">)</span></div>
 
+
+<div class="viewcode-block" id="TlsaValue.__repr__">
+<a class="viewcode-back" href="../../../modules/record/octodns.record.tlsa.html#octodns.record.tlsa.TlsaValue.__repr__">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="fm">__repr__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="p">(</span>
             <span class="sa">f</span><span class="s2">&quot;&#39;</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">certificate_usage</span><span class="si">}</span><span class="s2"> </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">selector</span><span class="si">}</span><span class="s2"> &#39;&quot;</span>
             <span class="sa">f</span><span class="s2">&quot;&#39;</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">matching_type</span><span class="si">}</span><span class="s2"> </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">certificate_association_data</span><span class="si">}</span><span class="s2">&#39;&quot;</span>
         <span class="p">)</span></div>
+</div>
 
 
 
